# avro-to-bigquery

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MAINTAINERS.md  README.md  SECURITY.md  docker-compose.yaml  pyproject.toml  pytest.ini  renovate.json  requirements-test.txt  requirements.txt  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.md
.github/workflows/: lint-renovate.yml  main.yml  publish_release.yml
avro_to_bigquery/: __init__.py  converter.py
docker/: Dockerfile  manylinux.Dockerfile  run_tests.sh
tests/unit/: test_basic.py  test_converter.py
