[metadata]
name = avro-to-bigquery
author = Colm O'Connor
author_email = coconnor1@wayfair.com
version = attr: avro_to_bigquery.__version__
description = Create bigquery schema from an avro schema.
long_description = file: README.md
long_description_content_type = text/markdown
license = See LICENSE
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]

python_requires = >=3.6
install_requires = 
    typing-extensions~=3.7;python_version<"3.8"
    google-cloud-bigquery==2.27.1
packages = find:

[options.package_data]

avro_to_bigquery = py.typed

[options.packages.find]
exclude = "*.tests", "*.tests.*", "tests.*", "tests"
